# disir-c

./: .gitattributes  .gitmodules  CMakeLists.txt  CONTRIBUTING.adoc  README.adoc  README.md  disir.spec
cli/: CMakeLists.txt  cli.cc  command.cc  command_dump.cc  command_export.cc  command_generate.cc  command_import.cc  command_list.cc  command_remove.cc  command_verify.cc  main.cc
doc/: CMakeLists.txt  DEVELOPER.adoc  DISIR_DEVELOPER.adoc  END_USER.adoc  SELL_IT.adoc  libdisir_public_documentation_doxygen.conf
doc/developer/: restriction.adoc  restriction_collection_example.cc
doc/quickstart/: quickstart.adoc
doc/quickstart/mold/: company.json
doc/specification/: core.adoc  json.adoc  org.adoc
lib/: CMakeLists.txt  README.adoc  collection.c  compare.c  context.c  context_config.c  context_default.c  context_documentation.c  context_keyval.c  context_mold.c  context_restriction.c  context_section.c  context_util.c  context_value.c  disir.c  disir_archive.cc  disir_archive_util.cc  disir_config.c  disir_config_query.c  disir_entry.c  disir_export.cc  disir_import.c  disir_mold.c  disir_plugin.c  element_storage.c  error.c  generate.c  instance_mold.c  log.c  query.c  update.c  util.c  validate.c  version.c.in
lib/fslib/: filepath.c  json.cc  mkdir.c  namespace.cc  query.cc  read.c  toml.cc  toml_serialize.cc  toml_unserialize.cc  write.c
lib/fslib/json/: CMakeLists.txt  input.cc  jsonIO.cc  json_mold_namespace_override.cc  json_serialize.cc  json_serialize_config.cc  json_serialize_mold.cc  json_unserialize.cc  json_unserialize_config.cc  json_unserialize_mold.cc  log.cc  marshal_config.cc  marshal_mold.cc  output.cc  unmarshal_config.cc  unmarshal_mold.cc  util.cc
lib/fslib/toml/: toml_serialize.cc  toml_unserialize.cc
lib/include/: archive_private.h  config.h  context_private.h  default.h  disir_private.h  documentation.h  element_storage.h  fs.h  import.h  keyval.h  log.h  mold.h  mqueue.h  query_private.h  restriction.h  section.h  update_private.h  value.h
lib/include/json/: dplugin_json.h  input.h  json_mold_override.h  json_serialize.h  json_unserialize.h  output.h
lib/io/: ini.c
lib/test/: basic_keyval.cc  basic_section.cc  basic_version_difference.cc  complex_section.cc  config_query_permutations.cc  json_test_mold.cc  multiple_defaults.cc  plugin.cc  restriction_config_parent_keyval_max_entry.cc  restriction_config_parent_keyval_min_entry.cc  restriction_config_parent_section_max_entry.cc  restriction_entries.cc  restriction_keyval_numeric_types.cc  restriction_section_parent_keyval_max_entry.cc
lib/void-list/: CMakeLists.txt  README.adoc  README.md  list.c
lib/void-list/src/: CMakeLists.txt
lib/void-list/test/: CMakeLists.txt  test.c
lib/void-multimap/: CMakeLists.txt  README.adoc
lib/void-multimap/doc/: CMakeLists.txt  multimap.doxygen.in
lib/void-multimap/src/: CMakeLists.txt  multimap.c
lib/void-multimap/test/: CMakeLists.txt  multimap_testsuite.c
plugin_test/: CMakeLists.txt  basic_keyval.cc  basic_section.cc  json_test_mold.cc  main.cc  restriction_config_parent_keyval_min_entry.cc  restriction_entries.cc  restriction_keyval_numeric_types.cc  restriction_section_parent_keyval_max_entry.cc
plugins/: CMakeLists.txt
plugins/json/: CMakeLists.txt  main.cc
plugins/test/: CMakeLists.txt  complex_section.cc  main.cc  restriction_config_parent_section_max_entry.cc  restriction_entries.cc
plugins/test_config_json/: CMakeLists.txt  main.cc
plugins/test_config_toml/: CMakeLists.txt  main.cc
plugins/toml/: CMakeLists.txt  main.cc  toml.cc
src/: CMakeLists.txt  collection.c  context.c  context_config.c  context_default.c  context_documentation.c  context_free_text.c  context_keyval.c  context_mold.c  context_restriction.c  context_schema.c  context_section.c  context_util.c  context_value.c  disir.c  disir_config.c  disir_entry.c  disir_mold.c  element_storage.c  io.c  log.c  update.c  util.c
src/io/: ini.c  print.c
src/private_include/: collection.h  config.h  context_private.h  default.h  disir_private.h  documentation.h  element_storage.h  keyval.h  log.h  mold.h  mqueue.h  restriction.h  schema.h  section.h  update_private.h  util_private.h  value.h
src/public_include/disir/: collection.h  context.h  disir.h  io.h  util.h
test/: CMakeLists.txt  gtest.cc  libdisir_testsuite.c  test_collection.c  test_context.c  test_context_default.c  test_context_documentation.c  test_context_mold.c  test_context_query.c  test_context_schema.c  test_element_storage.c  test_helper.cc  test_helper.h  test_helper.h.in  test_introduced.c  test_mqueue.c  test_util.c
test/internal_lib/: CMakeLists.txt  element_storage.cc  mqueue.cc
test/internal_util/: CMakeLists.txt  context.cc  context_default.cc  context_documentation.cc  disir_value.cc  mold_equiv.cc  query.cc  resolve_name.cc
test/plugins/: CMakeLists.txt  config.toml  serialize_unserialize.cc
test/plugins/json/: CMakeLists.txt  dio_json_test_config.ini  jsontest.cc  marshal_config.cc  marshal_mold.cc  mold_entries_override.cc  serialize_config_test.cc  test_helper.cc  (+9 more)
test/public_api/: CMakeLists.txt  collection.cc  compare.cc  context.cc  context_config.cc  context_config_keyval.cc  context_config_section.cc  context_default.cc  context_documentation.cc  context_free_text.cc  context_keyval.cc  context_mold.cc  context_mold_keyval.cc  context_mold_keyval_enum.cc  context_mold_section.cc  context_restriction.cc  context_restriction_config_entries.cc  context_restriction_config_keyval_plugin.cc  context_restriction_invalid.cc  context_restriction_mold_keyval_float.cc  context_restriction_mold_keyval_integer.cc  context_restriction_mold_keyval_string.cc  context_restriction_util.cc  context_section.cc  dc__disir_config_set__get_keyval_string.cc  dc_compare.cc  dc_fatal_error.cc  dc_get_value.cc  dc_keyval_set_default.cc  dc_resolve_root_name.cc  dc_restriction_collection.cc  dc_restriction_entries_minimum__maximum.cc  disir.cc  disir_config.cc  disir_entry_finished.cc  disir_mold.cc  disir_plugin_registered__finished.cc  invalid_contexts.cc  query.cc  semantic_version.cc  (+2 more)
(+106 files in other folders)
